--- a/package.json
+++ b/package.json
@@ -3,9 +3,60 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "autoprefixer": "7.1.1",
+    "axios": "^0.16.2",
+    "babel-core": "6.25.0",
+    "babel-jest": "^24.9.0",
+    "babel-loader": "^8.0.6",
+    "babel-preset-react-app": "^3.0.1",
+    "babel-runtime": "6.23.0",
+    "bootstrap": "^3.3.7",
+    "case-sensitive-paths-webpack-plugin": "2.1.1",
+    "chalk": "1.1.3",
+    "css-loader": "0.28.4",
+    "deep-freeze": "0.0.1",
+    "dotenv": "4.0.0",
+    "eslint": "^6.6.0",
+    "eslint-config-react-app": "^1.0.5",
+    "eslint-loader": "1.7.1",
+    "eslint-plugin-flowtype": "2.34.0",
+    "eslint-plugin-import": "2.2.0",
+    "eslint-plugin-jsx-a11y": "5.0.3",
+    "eslint-plugin-react": "7.1.0",
+    "extract-text-webpack-plugin": "2.1.2",
+    "faker": "^4.1.0",
+    "file-loader": "0.11.2",
+    "fs-extra": "3.0.1",
+    "history": "^4.6.3",
+    "html-webpack-plugin": "2.29.0",
+    "jest": "^24.9.0",
+    "jquery": "^3.3.1",
+    "lodash": "^4.17.4",
+    "md5": "^2.2.1",
+    "object-assign": "4.1.1",
+    "postcss-flexbugs-fixes": "3.0.0",
+    "postcss-loader": "2.0.6",
+    "promise": "7.1.1",
+    "prop-types": "^15.7.2",
     "react": "^16.11.0",
+    "react-dev-utils": "^3.0.2",
     "react-dom": "^16.11.0",
-    "react-scripts": "3.2.0"
+    "react-error-overlay": "^1.0.9",
+    "react-hot-loader": "^3.0.0-beta.7",
+    "react-redux": "^5.0.5",
+    "react-router": "^4.1.2",
+    "react-router-dom": "^4.1.2",
+    "react-router-redux": "^4.0.8",
+    "react-scripts": "3.2.0",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.3.0",
+    "style-loader": "0.18.2",
+    "sw-precache-webpack-plugin": "0.11.3",
+    "url-loader": "0.5.9",
+    "webpack": "4.41.0",
+    "webpack-dev-server": "3.2.1",
+    "webpack-manifest-plugin": "1.1.0",
+    "whatwg-fetch": "2.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
